--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,8 +3,10 @@
 
 @string{aps = {American Physical Society,}}
 
-@inproceedings{yangvqgraph,
-  title={VQGraph: Rethinking Graph Representation Space for Bridging GNNs and MLPs},
-  author={Yang, Ling and Tian, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
-  booktitle={The Twelfth International Conference on Learning Representations}
+@book{einstein1920relativity,
+  title={Relativity: the Special and General Theory},
+  author={Einstein, Albert},
+  year={1920},
+  publisher={Methuen & Co Ltd},
+  html={relativity.html}
 }
