--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,10 +3,46 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+
+@inproceedings{yangvqgraph,
+  title={VQGraph: Rethinking Graph Representation Space for Bridging GNNs and MLPs},
+  author={Yang, Ling and Tian, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
+  booktitle={The Twelfth International Conference on Learning Representations},
+  year={2024},
+}
+
+@article{tian2024videotetris,
+  title={Videotetris: Towards compositional text-to-video generation},
+  author={Tian, Ye and Yang, Ling and Yang, Haotian and Gao, Yuan and Deng, Yufan and Wang, Xintao and Yu, Zhaochen and Tao, Xin and Wan, Pengfei and ZHANG, Di and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={37},
+  pages={29489--29513},
+  year={2024},
+  selected={true},
+}
+@article{zhang2024realcompo,
+  title={Realcompo: Dynamic equilibrium between realism and compositionality improves text-to-image diffusion models},
+  author={Zhang, Xinchen and Yang, Ling and Cai, Yaqi and Yu, Zhaochen and Xie, Jiake and Tian, Ye and Xu, Minkai and Tang, Yong and Yang, Yujiu and Cui, Bin},
+  journal={arXiv e-prints},
+  pages={arXiv--2402},
+  year={2024}
+}
+@article{tian2025diffusion,
+  title={Diffusion-Sharpening: Fine-tuning Diffusion Models with Denoising Trajectory Sharpening},
+  author={Tian, Ye and Yang, Ling and Zhang, Xinchen and Tong, Yunhai and Wang, Mengdi and Cui, Bin},
+  journal={arXiv preprint arXiv:2502.12146},
+  year={2025}
+}
+@article{yang2025hermesflow,
+  title={HermesFlow: Seamlessly Closing the Gap in Multimodal Understanding and Generation},
+  author={Yang, Ling and Zhang, Xinchen and Tian, Ye and Shang, Chenming and Xu, Minghao and Zhang, Wentao and Cui, Bin},
+  journal={arXiv preprint arXiv:2502.12148},
+  year={2025}
+}
+@article{yang2025mmada,
+  title={MMaDA: Multimodal Large Diffusion Language Models},
+  author={Yang, Ling and Tian, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
+  journal={arXiv preprint arXiv:2505.15809},
+  year={2025},
+  selected={true},
 }
