--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,13 +5,20 @@
 
 
 @inproceedings{yangvqgraph,
+  abbr={ICLR 2024},
   title={VQGraph: Rethinking Graph Representation Space for Bridging GNNs and MLPs},
-  author={Yang, Ling and Tian, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
+  author={Yang, Ling and Tian*, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
   booktitle={The Twelfth International Conference on Learning Representations},
   year={2024},
+  annotation={* Equal contribution},
+  pdf={https://openreview.net/forum?id=h6Tz85BqRI},
+  arxiv={2308.02117},
+  code={https://github.com/YangLing0818/VQGraph},
+  preview={vqgraph.png},
 }
 
 @article{tian2024videotetris,
+  abbr={NeurIPS 2024},
   title={Videotetris: Towards compositional text-to-video generation},
   author={Tian, Ye and Yang, Ling and Yang, Haotian and Gao, Yuan and Deng, Yufan and Wang, Xintao and Yu, Zhaochen and Tao, Xin and Wan, Pengfei and ZHANG, Di and others},
   journal={Advances in Neural Information Processing Systems},
@@ -21,28 +28,35 @@
   selected={true},
 }
 @article{zhang2024realcompo,
+  abbr={NeurIPS 2024},
   title={Realcompo: Dynamic equilibrium between realism and compositionality improves text-to-image diffusion models},
-  author={Zhang, Xinchen and Yang, Ling and Cai, Yaqi and Yu, Zhaochen and Xie, Jiake and Tian, Ye and Xu, Minkai and Tang, Yong and Yang, Yujiu and Cui, Bin},
+  author={Zhang, Xinchen and Yang*, Ling and Cai, Yaqi and Yu, Zhaochen and Xie, Jiake and Tian, Ye and Xu, Minkai and Tang, Yong and Yang, Yujiu and Cui, Bin},
   journal={arXiv e-prints},
   pages={arXiv--2402},
-  year={2024}
+  year={2024},
+  annotation={* Equal contribution},
 }
 @article{tian2025diffusion,
+  abbr={arXiv 2025},
   title={Diffusion-Sharpening: Fine-tuning Diffusion Models with Denoising Trajectory Sharpening},
   author={Tian, Ye and Yang, Ling and Zhang, Xinchen and Tong, Yunhai and Wang, Mengdi and Cui, Bin},
   journal={arXiv preprint arXiv:2502.12146},
   year={2025}
 }
 @article{yang2025hermesflow,
+  abbr={arXiv 2025},
   title={HermesFlow: Seamlessly Closing the Gap in Multimodal Understanding and Generation},
-  author={Yang, Ling and Zhang, Xinchen and Tian, Ye and Shang, Chenming and Xu, Minghao and Zhang, Wentao and Cui, Bin},
+  author={Yang, Ling and Zhang*, Xinchen and Tian, Ye and Shang, Chenming and Xu, Minghao and Zhang, Wentao and Cui, Bin},
   journal={arXiv preprint arXiv:2502.12148},
-  year={2025}
+  year={2025},
+  annotation={* Equal contribution},
 }
 @article{yang2025mmada,
+  abbr={arXiv 2025},
   title={MMaDA: Multimodal Large Diffusion Language Models},
-  author={Yang, Ling and Tian, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
+  author={Yang, Ling and Tian*, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
   journal={arXiv preprint arXiv:2505.15809},
   year={2025},
+  annotation={* Equal contribution},
   selected={true},
 }
