--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,6 +15,7 @@
   arxiv={2308.02117},
   code={https://github.com/YangLing0818/VQGraph},
   preview={vqgraph.png},
+  github={YangLing0818/VQGraph},
 }
 
 @article{tian2024videotetris,
