--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,7 @@
   code={https://github.com/YangLing0818/VQGraph},
   preview={vqgraph.png},
   github={YangLing0818/VQGraph},
+  google_scholar={2osOgNQ5qMEC},
 }
 
 @article{tian2024videotetris,
