--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
   code={https://github.com/YangLing0818/VQGraph},
   preview={vqgraph.png},
   github={YangLing0818/VQGraph},
-  google_scholar={2osOgNQ5qMEC},
+  google_scholar_id={2osOgNQ5qMEC},
 }
 
 @article{tian2024videotetris,
