--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,12 @@
   pages={29489--29513},
   year={2024},
   selected={true},
-  
+  arxiv={2406.04277},
+  code={https://github.com/YangLing0818/VideoTetris},
+  preview={videotetris.png},
+  google_scholar_id={d1gkVwhDpl0C},
+  github={YangLing0818/VideoTetris},
+  selected={true},
 }
 @article{zhang2024realcompo,
   abbr={NeurIPS 2024},
@@ -37,6 +42,12 @@
   pages={arXiv--2402},
   year={2024},
   annotation={* Equal contribution},
+  arxiv={2402.12908},
+  code={hhttps://github.com/YangLing0818/RealCompo},
+  preview={realcompo.png},
+  google_scholar_id={UeHWp8X0CEIC},
+  github={XinchenZhang0/RealCompO},
+  selected={true},
 }
 @article{tian2025diffusion,
   abbr={arXiv 2025},
@@ -44,6 +55,7 @@
   author={Tian, Ye and Yang, Ling and Zhang, Xinchen and Tong, Yunhai and Wang, Mengdi and Cui, Bin},
   journal={arXiv preprint arXiv:2502.12146},
   year={2025}
+
 }
 @article{yang2025hermesflow,
   abbr={arXiv 2025},
