--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,14 +47,17 @@
   preview={realcompo.png},
   google_scholar_id={UeHWp8X0CEIC},
   github={XinchenZhang0/RealCompO},
-  selected={true},
 }
 @article{tian2025diffusion,
   abbr={arXiv 2025},
   title={Diffusion-Sharpening: Fine-tuning Diffusion Models with Denoising Trajectory Sharpening},
   author={Tian, Ye and Yang, Ling and Zhang, Xinchen and Tong, Yunhai and Wang, Mengdi and Cui, Bin},
   journal={arXiv preprint arXiv:2502.12146},
-  year={2025}
+  year={2025},
+  code={https://github.com/Gen-Verse/Diffusion-Sharpening},
+  preview={diffusion-sharpening.png},
+  google_scholar_id={IjCSPb-OGe4C},
+  github={Gen-Verse/Diffusion-Sharpening},
 
 }
 @article{yang2025hermesflow,
