--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,6 @@
   code={https://github.com/YangLing0818/VQGraph},
   preview={vqgraph.png},
   github={YangLing0818/VQGraph},
-  google_scholar_id={2osOgNQ5qMEC},
 }
 
 @article{tian2024videotetris,
@@ -30,7 +29,6 @@
   arxiv={2406.04277},
   code={https://github.com/YangLing0818/VideoTetris},
   preview={videotetris.png},
-  google_scholar_id={d1gkVwhDpl0C},
   github={YangLing0818/VideoTetris},
   selected={true},
 }
@@ -43,10 +41,9 @@
   year={2024},
   annotation={* Equal contribution},
   arxiv={2402.12908},
-  code={hhttps://github.com/YangLing0818/RealCompo},
+  code={https://github.com/YangLing0818/RealCompo},
   preview={realcompo.png},
-  google_scholar_id={UeHWp8X0CEIC},
-  github={XinchenZhang0/RealCompO},
+  github={YangLing0818/RealCompO},
 }
 @article{tian2025diffusion,
   abbr={arXiv 2025},
@@ -54,9 +51,9 @@
   author={Tian, Ye and Yang, Ling and Zhang, Xinchen and Tong, Yunhai and Wang, Mengdi and Cui, Bin},
   journal={arXiv preprint arXiv:2502.12146},
   year={2025},
+  arxiv={2502.12146},
   code={https://github.com/Gen-Verse/Diffusion-Sharpening},
-  preview={diffusion-sharpening.png},
-  google_scholar_id={IjCSPb-OGe4C},
+  preview={diffusion-sharpen.png},
   github={Gen-Verse/Diffusion-Sharpening},
 
 }
@@ -67,6 +64,10 @@
   journal={arXiv preprint arXiv:2502.12148},
   year={2025},
   annotation={* Equal contribution},
+  arxiv={2502.12148},
+  code={https://github.com/Gen-Verse/HermesFlow},
+  preview={hermesflow.png},
+  github={Gen-Verse/HermesFlow},
 }
 @article{yang2025mmada,
   abbr={arXiv 2025},
@@ -76,4 +77,8 @@
   year={2025},
   annotation={* Equal contribution},
   selected={true},
+  arxiv={2505.15809},
+  code={https://github.com/Gen-Verse/MMaDA},
+  preview={mmada.png},
+  github={Gen-Verse/MMaDA},
 }
