--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 @article{yang2025mmada,
   abbr={arXiv 2025},
   title={MMaDA: Multimodal Large Diffusion Language Models},
-  author={Yang, Ling and Tian*, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
+  author={Yang, Ling* and Tian*, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
   journal={arXiv preprint arXiv:2505.15809},
   year={2025},
   annotation={* Equal contribution},
@@ -75,7 +75,7 @@
 @inproceedings{yangvqgraph,
   abbr={ICLR 2024},
   title={VQGraph: Rethinking Graph Representation Space for Bridging GNNs and MLPs},
-  author={Yang, Ling and Tian*, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
+  author={Yang, Ling* and Tian*, Ye and Xu, Minkai and Liu, Zhongyi and Hong, Shenda and Qu, Wei and Zhang, Wentao and Bin, CUI and Zhang, Muhan and Leskovec, Jure},
   booktitle={The Twelfth International Conference on Learning Representations},
   year={2024},
   annotation={* Equal contribution},
