--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,10 +5,10 @@
 
 
 @article{yang2025mmada,
-  abbr={arXiv 2025},
+  abbr={NeurIPS 2025},
   title={MMaDA: Multimodal Large Diffusion Language Models},
   author={Yang, Ling* and Tian*, Ye and Li, Bowen and Zhang, Xinchen and Shen, Ke and Tong, Yunhai and Wang, Mengdi},
-  journal={arXiv preprint arXiv:2505.15809},
+  journal={NeurIPS 2025},
   year={2025},
   annotation={* Equal contribution},
   selected={true},
