--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{tian2025mmadaparallel,
+  abbr={arXiv 2025},
+  title={MMaDA-Parallel: Multimodal Large Diffusion Language Models for Thinking-Aware Editing and Generation},
+  author={Tian, Ye and Yang, Ling and Yang, Jiongfan and Wang, Anran and Tian, Yu and Zheng, Jiani and Wang, Haochen and Teng, Zhiyang and Wang, Zhuochen and Wang, Yinjie and Tong, Yunhai and Wang, Mengdi and Li, Xiangtai},
+  journal={arXiv preprint arXiv:2511.09611},
+  year={2025},
+  selected={true},
+  arxiv={2511.09611},
+  code={https://github.com/tyfeld/MMaDA-Parallel},
+  preview={mmadaparallel.gif},
+  github={tyfeld/MMaDA-Parallel},
+}
 
 @article{yang2025mmada,
   abbr={NeurIPS 2025},
